# CircleDetector

./: .gitignore  CMakeLists.txt  README.md  REAME.md  generate-vs17.ps1  vcpkg.json
.github/workflows/: build.yml  test.yml
app/: CMakeLists.txt  CircleDetector.cpp  Main.cpp  config.json
docs/: MakeTex.ps1  article.tex  interview.pptx  references.bib
include/: CircleDetectorLib.h  DataTypes.h
src/: CMakeLists.txt  CircleDetector.cpp  CircleDetectorLib.cpp
tests/: CMakeLists.txt  CircleDetectorTest.cpp
tests/poc/: angle.txt  coords.ipynb  coords.txt  curvaturesDebug15.txt  profile11.txt  profile15.txt  rotated.txt  softened.txt  translated.txt
